--- a/web/controller.html
+++ b/web/controller.html
@@ -16,10 +16,23 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+  <script type="text/javascript" src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.23.0.min.js"></script>
 
   <script src="js/controller.js"></script>
 </head>
 
 <body>
+  <div id="content" class="center">
+    <div id="controls">
+      <svg height="300" width="300">
+        <circle cx="150" cy="150" r="120" stroke="black" stroke-width="3" fill="white" id="rim" />
+        <circle cx="150" cy="150" r="40" stroke="black" stroke-width="3" fill="red" id="knob"/>
+      </svg>
+    </div>
+
+    <div id="sidebar">
+
+    </div>
+  </div>
 </body>
 </html>
