--- a/web/controller.html
+++ b/web/controller.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
   <script type="text/javascript" src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.23.0.min.js"></script>
 
+  <script src="js/pubnub.js"></script>
   <script src="js/controller.js"></script>
 </head>
 
