--- a/web/index.html
+++ b/web/index.html
@@ -16,14 +16,20 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+  <script type="text/javascript" src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.23.0.min.js"></script>
 
+  <script src="js/pubnub.js"></script>
   <script src="js/launcher.js"></script>
 </head>
 
 <body>
   <div id="instructions" class="center">
     <h1>Loading...</h1>
-    <div id="qrcode" class="center" />
+    <div id="qrcode" class="center"></div>
+  </div>
+
+  <div id="presence">
+    <span class=".presence"></span>
   </div>
 </body>
 </html>
