--- a/web/controller.html
+++ b/web/controller.html
@@ -8,7 +8,9 @@
   <title>Mark's Snake Project - Controller</title>
 
   <meta name="description" content="Controller for Mark's multiplayer snake game">
-  <meta name="viewport" content="width=device-width, target-densityDpi=device-dpi, initial-scale=1.0">
+  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
@@ -25,14 +27,15 @@
 <body>
   <div id="content" class="center">
     <div id="controls">
-      <svg height="300" width="300">
-        <circle cx="150" cy="150" r="120" stroke="black" stroke-width="3" fill="white" id="rim" />
-        <circle cx="150" cy="150" r="40" stroke="black" stroke-width="3" fill="red" id="knob"/>
+      <svg height="500" width="500">
+        <circle cx="250" cy="250" r="200" stroke="black" stroke-width="3" fill="white" id="rim" />
+        <circle cx="250" cy="250" r="60" stroke="black" stroke-width="3" fill="red" id="knob"/>
       </svg>
     </div>
 
     <div id="sidebar">
-
+      <div id="playerid"></div>
+      <div id="debug"></div>
     </div>
   </div>
 </body>
