Improved controller rendering and behavior

--- a/web/controller.html
+++ b/web/controller.html
@@ -27,14 +27,14 @@
 <body>
   <div id="content" class="center">
     <div id="controls">
-      <svg height="500" width="500">
+      <svg height="500" width="500" id="svg">
         <circle cx="250" cy="250" r="200" stroke="black" stroke-width="3" fill="white" id="rim" />
         <circle cx="250" cy="250" r="60" stroke="black" stroke-width="3" fill="red" id="knob"/>
       </svg>
     </div>
 
     <div id="sidebar">
-      <div id="playerid"></div>
+      <div id="score"></div>
       <div id="debug"></div>
     </div>
   </div>
