--- a/web/qr.html
+++ b/web/qr.html
@@ -24,8 +24,9 @@
 
 <body>
   <div id="instructions" class="center">
-    <h1>Loading...</h1>
+    <h1>Scan the QR code</h1>
     <div id="qrcode" class="center"></div>
+    <h1>to join the game</h1>
   </div>
 
   <div id="presence">
