Show URL next to QR code

--- a/web/qr.html
+++ b/web/qr.html
@@ -26,6 +26,7 @@
   <div id="instructions" class="center">
     <h1>Scan the QR code</h1>
     <div id="qrcode" class="center"></div>
+    <div id="link"></div>
     <h1>to join the game</h1>
   </div>
 
